<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvSuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvSuccess"
        android:textSize="0sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvQuestionConfirm"
            android:layout_width="0dip"
            android:layout_height="40dp"
            android:layout_weight=".3"
            android:gravity="center"
            android:text="@string/questionConfirm"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnYes"
            android:layout_width="0dip"
            android:layout_height="40dp"
            android:layout_weight=".3"
            android:gravity="center"
            android:textColor="#0022FC"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:background="#FFFFFF"
            android:text="@string/ConfirmYes" />

        <Button
            android:id="@+id/btnNo"
            android:layout_width="0dip"
            android:layout_height="40dp"
            android:layout_weight=".3"
            android:gravity="center"
            android:textColor="#0022FC"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:background="#FFFFFF"
            android:text="@string/ConfirmNo" />

    </LinearLayout>


</LinearLayout>