<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".controller.MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layouteditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        android:gravity="bottom"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@id/btnAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="top"
            android:layout_marginLeft="5dp"
            android:drawableLeft="@drawable/ic_search_black_24dp"
            android:background="@drawable/vien"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/btnAdd"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginEnd="5dp"
        android:background="@null"
        android:gravity="center"
        android:src="@drawable/ic_action_add"
        app:layout_constraintBottom_toBottomOf="@+id/layouteditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/layouteditText" />

    <Button
        android:id="@+id/btnWord"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:background="#FFFFFF"
        android:drawableTop="@drawable/vocabulary"
        android:text="@string/newword"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#0022FC"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnGrammar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listview" />

    <Button
        android:id="@+id/btnGrammar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="#FFFFFF"
        android:drawableTop="@drawable/img_grammar"
        android:text="@string/grammar"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#0022FC"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonPractise"
        app:layout_constraintStart_toEndOf="@id/btnWord"
        app:layout_constraintTop_toBottomOf="@+id/listview" />

    <ListView
        android:id="@+id/listview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/vien"
        app:layout_constraintBottom_toTopOf="@+id/btnWord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="5dp"
        android:gravity="left"
        android:text="@string/total"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/listview"
        app:layout_constraintEnd_toStartOf="@+id/textViewTotal"
        app:layout_constraintTop_toBottomOf="@+id/layouteditText" />

    <TextView
        android:id="@+id/textViewTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="0"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top" />

    <Button
        android:id="@+id/buttonPractise"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="0dp"
        android:drawableTop="@drawable/img_practise"
        android:text="@string/practise"
        android:textAlignment="center"
        android:background="#FFFFFF"
        android:textAllCaps="false"
        android:textColor="#0022FC"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnGrammar"
        app:layout_constraintTop_toBottomOf="@+id/listview" />


</androidx.constraintlayout.widget.ConstraintLayout>